Fix first photo on small  resolutions

--- a/app/assets/stylesheets/responsive.less
+++ b/app/assets/stylesheets/responsive.less
@@ -497,10 +497,10 @@
 	ul.thumbnails li.span2 {
 	    display: block;
 	    margin: 10px auto;
-	}
 
-	.large-photo-list li:first-child {
-	    margin: 10px auto;
+	    &:first-child {
+	    	 margin: 10px auto;
+	    }
 	}
 
 }
